cp project/force-app/main/default/objects/Construction_Milestone__c/Construction_Milestone__c.object-meta.xml
<CustomObject>
    <label>Construction Milestone</label>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>