cp project/force-app/main/default/objects/Construction_Milestone__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Construction Milestones</relationshipLabel>
    <relationshipName>Construction_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>