cp project/force-app/main/default/objects/Construction_Milestone__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foundation</fullName>
                <default>true</default>
                <label>Foundation</label>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Ground Floor</fullName>
            </value>
            <value>
                <fullName>5th Floor Slab</fullName>
            </value>
            <value>
                <fullName>Brick Work</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Final Demand</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Construction Completed</fullName>
                <isActive>false</isActive>
                <label>Construction Completed</label>
            </value>
            <value>
                <fullName>Finishing</fullName>
                <isActive>false</isActive>
                <label>Finishing</label>
            </value>
            <value>
                <fullName>Plastering</fullName>
                <isActive>false</isActive>
                <label>Plastering</label>
            </value>
            <value>
                <fullName>Structure</fullName>
                <isActive>false</isActive>
                <label>Structure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>