cp project/force-app/main/default/objects/Construction_Milestone__c/fields/Milestone_Number__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Number__c</fullName>
    <label>Milestone Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>