cp project/force-app/main/default/objects/Construction_Milestone__c/fields/Payment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Payment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Trigger</label>
    <type>Checkbox</type>
</CustomField>